--- a/light/android.hardware.light@2.0-service.sony-8974.rc
+++ b/light/android.hardware.light@2.0-service.sony-8974.rc
@@ -19,7 +19,7 @@ on init
   chown system system /sys/class/leds/led:rgb_blue/pause_hi_multi
 
 
-service light-hal-2-0 /system/vendor/bin/hw/android.hardware.light@2.0-service.sony-8974
+service vendor.light-hal-2-0 /system/vendor/bin/hw/android.hardware.light@2.0-service.sony-8974
     class hal
     user system
     group system
