--- a/light/android.hardware.light@2.0-service.sony-8974.rc
+++ b/light/android.hardware.light@2.0-service.sony-8974.rc
@@ -1,3 +1,24 @@
+on init
+  # led RGB
+  chown system system /sys/class/leds/rgb/sync_state
+  chown system system /sys/class/leds/rgb/start_blink
+  chown system system /sys/class/leds/led:rgb_red/brightness
+  chown system system /sys/class/leds/led:rgb_red/lut_pwm
+  chown system system /sys/class/leds/led:rgb_red/step_duration
+  chown system system /sys/class/leds/led:rgb_red/pause_lo_multi
+  chown system system /sys/class/leds/led:rgb_red/pause_hi_multi
+  chown system system /sys/class/leds/led:rgb_green/brightness
+  chown system system /sys/class/leds/led:rgb_green/lut_pwm
+  chown system system /sys/class/leds/led:rgb_green/step_duration
+  chown system system /sys/class/leds/led:rgb_green/pause_lo_multi
+  chown system system /sys/class/leds/led:rgb_green/pause_hi_multi
+  chown system system /sys/class/leds/led:rgb_blue/brightness
+  chown system system /sys/class/leds/led:rgb_blue/lut_pwm
+  chown system system /sys/class/leds/led:rgb_blue/step_duration
+  chown system system /sys/class/leds/led:rgb_blue/pause_lo_multi
+  chown system system /sys/class/leds/led:rgb_blue/pause_hi_multi
+
+
 service light-hal-2-0 /system/vendor/bin/hw/android.hardware.light@2.0-service.sony-8974
     class hal
     user system
