--- a/light/android.hardware.light@2.0-service.sony-8974.rc
+++ b/light/android.hardware.light@2.0-service.sony-8974.rc
@@ -23,3 +23,4 @@ service light-hal-2-0 /system/vendor/bin/hw/android.hardware.light@2.0-service.s
     class hal
     user system
     group system
+    shutdown critical
